k8s/manifests/api-python.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-python
  labels:
    app: api-python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-python
  template:
    metadata:
      labels:
        app: api-python
    spec:
      containers:
        - name: api-python
          image: ghcr.io/fabdev10/api-python:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: api-python
  labels:
    app: api-python
spec:
  type: ClusterIP
  selector:
    app: api-python
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
